# hpp-gik

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  bootstrap  configure  configure.ac  deps.ac  hpp-gik.pc.cmake  hppGik.pc.in  index.html
doc/: CMakeLists.txt  Doxyfile.extra.in  Makefile.am  Makefile.in  footer.html  header.html  hpp.css  hpp.dox.in  package.dox.cmake
doc/additionalDoc/: main-page.h
include/: CMakeLists.txt  Makefile.am  Makefile.in  hppGikTools.h
include/constraints/: hppGikComConstraint.h  hppGikConfigurationConstraint.h  hppGikGazeConstraint.h  hppGikJointStateConstraint.h  hppGikLP2Constraint.h  hppGikLPConstraint.h  hppGikMotionConstraint.h  hppGikParallelConstraint.h  hppGikPlaneConstraint.h  hppGikPlannableConstraint.h  hppGikPointingConstraint.h  hppGikPositionConstraint.h  hppGikPrioritizedStateConstraint.h  hppGikRotationConstraint.h  hppGikSingleMotionElementConstraint.h  hppGikTransformationConstraint.h  hppGikVectorizableConstraint.h
include/core/: hppGikBounder.h  hppGikMotionPlan.h  hppGikMotionPlanColumn.h  hppGikMotionPlanElement.h  hppGikMotionPlanRow.h  hppGikPrioritizedMotion.h  hppGikSolver.h  hppGikSolverBasic.h  hppGikSolverHumanoid.h  hppGikSolverRobotAttached.h  hppGikSolverRobotFree.h
include/examples/: example.h
include/hpp/gik/: tools.hh
include/hpp/gik/constraint/: com-constraint.hh  configuration-constraint.hh  gaze-constraint.hh  joint-state-constraint.hh  motion-constraint.hh  parallel-constraint.hh  plane-constraint.hh  pointing-constraint.hh  position-constraint.hh  prioritized-state-constraint.hh  relative-com-constraint.hh  relative-transformation-constraint.hh  rotation-constraint.hh  transformation-constraint.hh  vectorizable-constraint.hh
include/hpp/gik/core/: bounder.hh  lne-solver.hh  motion-plan-column.hh  motion-plan-element.hh  motion-plan-row.hh  motion-plan.hh  (+3 more)
include/motionplanners/: hppGikLocomotionPlan.h  hppGikLocomotionPlanner.h  hppGikPreviewController.h  hppGikPreviewController10ms.ini  hppGikPreviewController20ms.ini  hppGikPreviewController50ms.ini  hppGikSingleMotionsPlan.h  hppGikStepPlanner.h
include/motionplanners/elements/: hppGikComMotion.h  hppGikCustomFootMotionElement.h  hppGikFootDisplaceElement.h  hppGikInterpolatedElement.h  hppGikLocomotionElement.h  hppGikNoLocomotion.h  hppGikReadyElement.h  hppGikStepElement.h  hppGikWalkElement.h  hppGikZMPshiftElement.h
include/robot/: hppGik2DShape.h  hppGikFootprintRelated.h  hppGikMaskFactory.h  hppGikStandingRobot.h  hppRobotMotion.h
include/tasks/: hppGikConfigurationTask.h  hppGikGenericTask.h  hppGikGenericTaskElements.h  hppGikHalfSittingTask.h  hppGikHalfSittingTaskBeta.h  hppGikHandTask.h  hppGikMetaTask.h  hppGikReachTask.h  hppGikRobotTask.h  hppGikSnoopTask.h  hppGikStepBackTask.h  hppGikStepTask.h  hppGikWholeBodyTask.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  hppGikTools.cpp  tools.cc
src/constraint/: com-constraint.cc  configuration-constraint.cc  gaze-constraint.cc  joint-state-constraint.cc  motion-constraint.cc  parallel-constraint.cc  plane-constraint.cc  pointing-constraint.cc  position-constraint.cc  relative-com-constraint.cc  relative-transformation-constraint.cc  rotation-constraint.cc  transformation-constraint.cc
src/constraints/: hppGikComConstraint.cpp  hppGikConfigurationConstraint.cpp  hppGikGazeConstraint.cpp  hppGikJointStateConstraint.cpp  hppGikLP2Constraint.cpp  hppGikLPConstraint.cpp  hppGikMotionConstraint.cpp  hppGikParallelConstraint.cpp  hppGikPlaneConstraint.cpp  hppGikPointingConstraint.cpp  hppGikPositionConstraint.cpp  hppGikRotationConstraint.cpp  hppGikTransformationConstraint.cpp
src/core/: bounder.cc  hppGikBounder.cpp  hppGikMotionPlan.cpp  hppGikMotionPlanColumn.cpp  hppGikMotionPlanElement.cpp  hppGikMotionPlanRow.cpp  hppGikSolver.cpp  hppGikSolverBasic.cpp  hppGikSolverHumanoid.cpp  hppGikSolverRobotAttached.cpp  hppGikSolverRobotFree.cpp  lne-solver.cc  motion-plan-column.cc  motion-plan-element.cc  motion-plan-row.cc  motion-plan.cc  solver-basic.cc  solver.cc
src/motionplanner/: locomotion-plan.cc  preview-controller.cc
src/motionplanner/element/: com-motion.cc  foot-displace-element.cc  interpolated-element.cc  no-locomotion.cc  step-element.cc  walk-element.cc  zmp-shift-element.cc
src/motionplanners/: hppGikLocomotionPlan.cpp  hppGikLocomotionPlanner.cpp  hppGikPreviewController.cpp  hppGikSingleMotionsPlan.cpp  hppGikStepPlanner.cpp
src/motionplanners/elements/: hppGikComMotion.cpp  hppGikCustomFootMotionElement.cpp  hppGikFootDisplaceElement.cpp  hppGikInterpolatedElement.cpp  hppGikNoLocomotion.cpp  hppGikStepElement.cpp  hppGikWalkElement.cpp  hppGikZMPshiftElement.cpp
src/robot/: foot-print-related.cc  hppGikFootprintRelated.cpp  hppGikMaskFactory.cpp  hppGikStandingRobot.cpp  hppRobotMotion.cpp  mask-factory.cc  robot-motion.cc  standing-robot.cc
src/task/: generic-task.cc  half-sitting-task.cc  hand-task.cc  meta-task.cc  reach-task.cc  robot-task.cc  step-back-task.cc  step-task.cc  whole-body-task.cc
src/tasks/: hppGikConfigurationTask.cpp  hppGikGenericTask.cpp  hppGikGenericTaskElements.cpp  hppGikHalfSittingTask.cpp  hppGikHalfSittingTaskBeta.cpp  hppGikHandTask.cpp  hppGikMetaTask.cpp  hppGikReachTask.cpp  hppGikRobotTask.cpp  hppGikSnoopTask.cpp  hppGikStepBackTask.cpp  hppGikStepTask.cpp  hppGikWholeBodyTask.cpp
tests/: CMakeLists.txt  Makefile.am  atlocal.in  common.hh  package.m4.in  test-halsitting.pos.stdout  test-halsitting.rpy.stdout  test1.rpy.stdout  test1.wst.stdout  test2.pos.stdout  test2.rpy.stdout  test2.wst.stdout  tests.at  tests.cc  testsuite.at
unitTesting/: Makefile.am  Makefile.in  hppGikBasicExample.cpp  hppGikBasicExample.h  hppGikTest.cpp  hppGikTest.h  hppGikViewer.cpp  hppGikViewer.h  main.cpp  test-halsitting.wst.stdout  test-halsitting.zmpobs.stdout  test1.pos.stdout  test1.rpy.stdout  test1.wst.stdout  test1.zmpobs.stdout  test2.pos.stdout  test2.rpy.stdout  test2.wst.stdout  test2.zmpobs.stdout  tests.cc
(+651 files in other folders)
